--- a/next-step/src/App.css
+++ b/next-step/src/App.css
@@ -103,6 +103,10 @@ h6 {
   height: 16px !important;
 }
 
+.text-align-center {
+  text-align: center;
+}
+
 .white-border {
   border: 1px solid white !important;
 }
