--- a/next-step/src/App.css
+++ b/next-step/src/App.css
@@ -132,9 +132,15 @@ h6 {
   background-color: gray !important;
 }
 
-.spacer {
+.spacer-32 {
   width: 100%;
-  height: 36px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+}
+.spacer-16 {
+  width: 100%;
+  height: 16px;
   display: flex;
   align-items: center;
 }
