--- a/next-step/src/App.css
+++ b/next-step/src/App.css
@@ -1,9 +1,10 @@
 html,
 body,
 #root,
-#App,
-#App > div {
+.App,
+.App:first-child {
   height: 100%;
+  background-color: gray;
   margin: 0;
 }
 
@@ -78,7 +79,7 @@ h6 {
 }
 
 .mrgn-t16 {
-  margin-top: 16px;
+  margin-top: 16px !important;
 }
 
 .mrgn-t24 {
