Add functionality to create muscle recovery profile. Add information popover to explain fatigue vs recovery profile. Remove seed data and update readme.

--- a/next-step/src/App.css
+++ b/next-step/src/App.css
@@ -133,6 +133,11 @@ h6 {
   color: #ef5350 !important;
 }
 
+.record-list-item {
+  list-style: none;
+  text-align: left;
+}
+
 .gray-background {
   background-color: gray !important;
 }
